# pico-term

./: #pixel.pio#  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  MANDEL.BAS  README.md  ansi_terminal.c  ansi_terminal.h  basic_progs.c  basic_progs.h  bell.c  bell.h  font.h  graphics_mode.c  graphics_mode.h  hid_app.c  hsync.pio  keyboard.c  keyboard.h  keycode_strings.h  main.c  main.h  nrgb.pio  sst.bas:Zone.Identifier  text_mode.c  text_mode.h  tusb_config.h  unused_code.c  usb_main.c  vga_charrom.c  vsync.pio  z80io.pio
